--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -22,14 +22,14 @@ jobs:
       - name: Build and push backend
         uses: docker/build-push-action@v4
         with:
-          context: .
-          file: Dockerfile
+          context: ./backend
+          file: ./backend/Dockerfile
           push: true
-          tags: ${{ secrets.DOCKERHUB_USERNAME }}/hetzner-dyndns-backend:latest
+          tags: ${{ secrets.IMAGE_NAME }}:backend
       - name: Build and push client
         uses: docker/build-push-action@v4
         with:
           context: ./client
           file: ./client/Dockerfile
           push: true
-          tags: ${{ secrets.DOCKERHUB_USERNAME }}/hetzner-dyndns-client:latest
+          tags: ${{ secrets.IMAGE_NAME }}:client
