Use public images by default

--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -1,9 +1,10 @@
 version: '3'
 services:
   backend:
-    build:
-      context: .
-      dockerfile: Dockerfile
+    image: nmbit/hetzner-dyndns-backend
+    # build:
+    #   context: .
+    #   dockerfile: Dockerfile
     ports:
       - "8000:80"
     env_file:
