--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -19,17 +19,17 @@ jobs:
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
-      - name: Build and push backend
-        uses: docker/build-push-action@v4
-        with:
-          context: ./backend
-          file: ./backend/Dockerfile
-          push: true
-          tags: ${{ secrets.IMAGE_NAME }}:backend
-      - name: Build and push client
-        uses: docker/build-push-action@v4
-        with:
-          context: ./client
-          file: ./client/Dockerfile
-          push: true
-          tags: ${{ secrets.IMAGE_NAME }}:client
+        - name: Build and push backend
+          uses: docker/build-push-action@v4
+          with:
+            context: ./backend
+            file: ./backend/Dockerfile
+            push: true
+            tags: nmbit/hetzner-dyndns-backend:latest
+        - name: Build and push client
+          uses: docker/build-push-action@v4
+          with:
+            context: ./client
+            file: ./client/Dockerfile
+            push: true
+            tags: nmbit/hetzner-dyndns-client:latest
