--- a/backend/.secrets.example
+++ b/backend/.secrets.example
@@ -1,3 +1,7 @@
 HETZNER_TOKEN=your-hetzner-token
 NTFY_URL=https://ntfy.example.com
 NTFY_TOPIC=HetznerDynDNSIssue
+DEBUG_LOGGING=0
+#LOG_FILE=app.log
+#LOG_MAX_BYTES=1048576
+#LOG_BACKUP_COUNT=3
