--- a/.secrets.example
+++ b/.secrets.example
@@ -1,6 +1,8 @@
 HETZNER_TOKEN=your-hetzner-token
 NTFY_URL=https://ntfy.example.com
 NTFY_TOPIC=HetznerDynDNSIssue
+#NTFY_USERNAME=user
+#NTFY_PASSWORD=pass
 DEBUG_LOGGING=0
 #LOG_FILE=app.log
 #LOG_MAX_BYTES=1048576
