--- a/client/docker-compose.yml
+++ b/client/docker-compose.yml
@@ -2,6 +2,7 @@ version: '3'
 services:
   client:
     image: nmbit/hetzner-dyndns-client
+    container_name: dyndns
     # build: .
     environment:
       - BACKEND_URL=http://backend:80  # replace with the URL of your backend
