--- a/client/docker-compose.yml
+++ b/client/docker-compose.yml
@@ -7,6 +7,8 @@ services:
     environment:
       - BACKEND_URL=http://backend:80  # replace with the URL of your backend
       - FQDN=example.yourdomain.tld
+      # value from backend's pre-shared-key/key.txt
+      - API_KEY=change-me
       # - IP=1.2.3.4  # optional static IP variant
       # update interval in seconds
       - INTERVAL=3600
