--- a/.secrets.example
+++ b/.secrets.example
@@ -1,6 +1,8 @@
 HETZNER_TOKEN=your-hetzner-token
 NTFY_URL=https://ntfy.example.com
 NTFY_TOPIC=HetznerDynDNSIssue
+# Optional API key for /update requests
+API_KEY=
 #NTFY_USERNAME=user
 #NTFY_PASSWORD=pass
 DEBUG_LOGGING=0
