--- a/.secrets.example
+++ b/.secrets.example
@@ -8,4 +8,6 @@ DEBUG_LOGGING=0
 #LOG_MAX_BYTES=1048576
 #LOG_BACKUP_COUNT=3
 API_KEY=
+#BASIC_AUTH_USERNAME=
+#BASIC_AUTH_PASSWORD=
 #ALLOWED_ZONES=
