Add configurable record TTL

--- a/.secrets.example
+++ b/.secrets.example
@@ -7,6 +7,7 @@ DEBUG_LOGGING=0
 #LOG_FILE=app.log
 #LOG_MAX_BYTES=1048576
 #LOG_BACKUP_COUNT=3
+#RECORD_TTL=86400
 API_KEY=
 #BASIC_AUTH_USERNAME=
 #BASIC_AUTH_PASSWORD=
