--- a/backend/.secrets.example
+++ b/backend/.secrets.example
@@ -7,3 +7,8 @@ DEBUG_LOGGING=0
 #LOG_FILE=app.log
 #LOG_MAX_BYTES=1048576
 #LOG_BACKUP_COUNT=3
+API_KEY=
+#BASIC_AUTH_USERNAME=
+#BASIC_AUTH_PASSWORD=
+#ALLOWED_ZONES=
+#RECORD_TTL=86400
