Make file logging optional

--- a/backend/.secrets.example
+++ b/backend/.secrets.example
@@ -4,7 +4,7 @@ NTFY_TOPIC=HetznerDynDNSIssue
 #NTFY_USERNAME=user
 #NTFY_PASSWORD=pass
 DEBUG_LOGGING=0
-#LOG_FILE=app.log
+#LOG_FILE=
 #LOG_MAX_BYTES=1048576
 #LOG_BACKUP_COUNT=3
 API_KEY=
