Use consistent pre-shared key naming

--- a/backend/.secrets.example
+++ b/backend/.secrets.example
@@ -7,7 +7,7 @@ DEBUG_LOGGING=0
 #LOG_FILE=
 #LOG_MAX_BYTES=1048576
 #LOG_BACKUP_COUNT=3
-API_KEY=
+PRE_SHARED_KEY=
 #BASIC_AUTH_USERNAME=
 #BASIC_AUTH_PASSWORD=
 #ALLOWED_ZONES=
