--- a/client/docker-compose.yml
+++ b/client/docker-compose.yml
@@ -3,6 +3,7 @@ services:
   client:
     image: nmbit/hetzner-dyndns-client
     container_name: dyndns
+    restart: unless-stopped
     # build: .
     environment:
       - BACKEND_URL=http://backend:80  # replace with the URL of your backend
