Adjust cache and record TTL defaults

--- a/backend/.secrets.example
+++ b/backend/.secrets.example
@@ -11,4 +11,6 @@ PRE_SHARED_KEY=
 #BASIC_AUTH_USERNAME=
 #BASIC_AUTH_PASSWORD=
 #ALLOWED_ZONES=
-#RECORD_TTL=86400
+#RECORD_TTL=21600
+#ZONE_CACHE_TTL=86400
+#REQUEST_CACHE_TTL=300
