Add per-host pre-shared keys

--- a/backend/.secrets.example
+++ b/backend/.secrets.example
@@ -7,7 +7,8 @@ DEBUG_LOGGING=0
 #LOG_FILE=
 #LOG_MAX_BYTES=1048576
 #LOG_BACKUP_COUNT=3
-PRE_SHARED_KEY=
+# comma-separated list of allowed hostnames, keys generated on startup
+REGISTERED_FQDNS=host.example.com
 #BASIC_AUTH_USERNAME=
 #BASIC_AUTH_PASSWORD=
 #ALLOWED_ZONES=
