Rename allowed zones to FQDNs and update router auth

--- a/backend/.secrets.example
+++ b/backend/.secrets.example
@@ -11,7 +11,7 @@ DEBUG_LOGGING=0
 REGISTERED_FQDNS=host.example.com
 #BASIC_AUTH_USERNAME=
 #BASIC_AUTH_PASSWORD=
-#ALLOWED_ZONES=
+#ALLOWED_FQDNS=host.example.com
 #RECORD_TTL=21600
 #ZONE_CACHE_TTL=86400
 #REQUEST_CACHE_TTL=300
