clarify pre-shared key file

--- a/backend/.secrets.example
+++ b/backend/.secrets.example
@@ -7,7 +7,8 @@ DEBUG_LOGGING=0
 #LOG_FILE=
 #LOG_MAX_BYTES=1048576
 #LOG_BACKUP_COUNT=3
-# comma-separated list of allowed hostnames, keys generated on startup
+# comma-separated list of allowed hostnames
+# matching tokens are stored in ./pre-shared-key and generated on startup
 REGISTERED_FQDNS=host.example.com
 #BASIC_AUTH_USERNAME=
 #BASIC_AUTH_PASSWORD=
