docs: show all env options

--- a/backend/.secrets.example
+++ b/backend/.secrets.example
@@ -7,6 +7,7 @@ DEBUG_LOGGING=0
 #LOG_FILE=
 #LOG_MAX_BYTES=1048576
 #LOG_BACKUP_COUNT=3
+#LISTEN_PORT=80
 # comma-separated list of allowed hostnames, keys generated on startup
 REGISTERED_FQDNS=host.example.com
 #BASIC_AUTH_USERNAME=
@@ -15,3 +16,5 @@ REGISTERED_FQDNS=host.example.com
 #RECORD_TTL=21600
 #ZONE_CACHE_TTL=86400
 #REQUEST_CACHE_TTL=300
+#LOST_CONNECTION_TIMEOUT=10800
+#CONNECTION_CHECK_INTERVAL=60
