--- a/backend/.secrets.example
+++ b/backend/.secrets.example
@@ -15,3 +15,6 @@ REGISTERED_FQDNS=host.example.com
 #RECORD_TTL=21600
 #ZONE_CACHE_TTL=86400
 #REQUEST_CACHE_TTL=300
+#LISTEN_PORT=80
+#LOST_CONNECTION_TIMEOUT=10800
+#CONNECTION_CHECK_INTERVAL=60
