--- a/backend/.secrets.example
+++ b/backend/.secrets.example
@@ -8,11 +8,10 @@ DEBUG_LOGGING=0
 #LOG_MAX_BYTES=1048576
 #LOG_BACKUP_COUNT=3
 #LISTEN_PORT=80
-# comma-separated list of allowed hostnames, keys generated on startup
+# comma-separated list of hostnames to manage, keys generated on startup
 REGISTERED_FQDNS=host.example.com
 #BASIC_AUTH_USERNAME=
 #BASIC_AUTH_PASSWORD=
-#ALLOWED_FQDNS=host.example.com
 #RECORD_TTL=21600
 #ZONE_CACHE_TTL=86400
 #REQUEST_CACHE_TTL=300
